--- a/wp-content/plugins/les-kanban/admin/css/kanban.css
+++ b/wp-content/plugins/les-kanban/admin/css/kanban.css
@@ -8,8 +8,13 @@
     --fondo-modal: #333333;
     --fondo-input: #454545;
     --fondo-input-hover: #565656;
-    --fondo-oscuro: #1d2327;
+    --fondo-wordpress: #1d2327;
     --boton: #454545;
+}
+
+#wpwrap {
+    background-color: var(--fondo-wordpress);
+    color: var(--font-first);
 }
 
 .container-kanban {
@@ -19,7 +24,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-color: var(--fond-kanban);
+    background-color: var(--fond-columns);
 }
 
 .inside .container-kanban {
@@ -47,28 +52,120 @@
     background-color: var(--fondo-input-hover);
 }
 
-.kanban-p {
-    color: #e70;
+.btn-tarea {
+    border: none;
+    display: block;
+    width: calc(100% - 24px);
+    margin-left: 12px;
+    margin-bottom: 12px;
+    font-size: medium;
+    border-radius: 5px;
+    background-color: var(--fondo-wordpress);
+    color: var(--font-first);
+    height: 32px;
+    transition: background-color 0.2s;
+    text-align: start;
+}
+
+.btn-tarea:hover {
+    background-color: var(--fond-columns);
+}
+
+#title {
+    color: #e70 !important;
     font-family: 'noto', sans-serif;
+    padding-top: 0 in !important;
     font-weight: 400;
     line-height: 32px;
-    font-size: 1.6em;
+    font-size: 1.2em;
     font-weight: bold;
+    background-color: var(--fond-columns) !important;
+    border: none;
+}
+
+#title:hover {
+    background-color: var(--fondo-input-hover);
+}
+
+#publish {
+    position: relative;
+    display: inline-block;
+    border: none;
+    font-size: medium;
+    font-weight: bold;
+    padding: 0 10px;
+    border-radius: 5px;
+    background-color: var(--boton);
+    box-shadow: 0 1px 4px rgba(30, 30, 30, 0.8);
+    color: var(--font-first);
+    margin: 0, 2px;
+    height: 32px;
+    transition: background-color 0.2s;
+}
+.publish:hover {
+    background-color: var(--fondo-input-hover);
+}
+#save-post {
+    position: relative;
+    display: inline-block;
+    border: none;
+    font-size: medium;
+    font-weight: bold;
+    padding: 0 10px;
+    border-radius: 5px;
+    background-color: var(--boton);
+    box-shadow: 0 1px 4px rgba(30, 30, 30, 0.8);
+    color: var(--font-first);
+    margin: 0, 2px;
+    height: 32px;
+    transition: background-color 0.2s;
+}
+
+.publish:hover {
+    background-color: var(--fondo-input-hover);
+}
+
+#submitdiv {
+    border: none;
+    margin-bottom: 0;
+}
+
+#postbox-container-1 {
+    background-color: var(--fond-columns) !important;
+
+}
+
+.hndle {
+    background-color: var(--fond-columns);
+}
+
+.handle-actions {
+    background-color: var(--fond-columns);
+    border: none;
+}
+
+#submitpost {
+    background-color: var(--fond-columns);
+}
+
+#major-publishing-actions {
+    background-color: var(--fond-columns);
+}
+#message{
+    background-color: var(--fond-columns);
 }
 
 .kanban-block {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 0;
-    margin: 0.2rem;
-    width: 30.5%;
+    box-sizing: border-box;
+    padding: 0.4rem;
+    margin: 0.4rem;
     min-width: 14rem;
-    min-height: 4.5rem;
     font-family: 'noto', sans-serif;
-    height: 100%;
 }
 
 .kanban-form {
@@ -86,8 +183,16 @@
 
 .kanban-column {
     font-family: 'noto', sans-serif;
-    font-size: 1.6em;
+    font-size: 1.2em;
     font-weight: bold;
+}
+
+.con-pendiente {
+    border: 1px solid #ca4552;
+    border-radius: 0.8rem;
+    margin-left: 0.6rem !important;
+    padding: 0.4rem 0;
+    background-color: var(--fondo-wordpress);
 }
 
 .pendiente {
@@ -95,10 +200,36 @@
     border-bottom: 4px solid #ca4552;
 }
 
+.con-progreso {
+    border: 1px solid #50af3c;
+    border-radius: 0.8rem;
+    padding: 0.4rem 0;
+    background-color: var(--fondo-wordpress);
+}
 
 .progreso {
     color: #50af3c;
     border-bottom: 4px solid #50af3c;
+}
+
+.con-pruebas {
+    border: 1px solid #d1b648;
+    border-radius: 0.8rem;
+    padding: 0.4rem 0;
+    background-color: var(--fondo-wordpress);
+}
+
+.prueba {
+    color: #d1b648;
+    border-bottom: 4px solid #d1b648;
+}
+
+.con-completado {
+    border: 1px solid #0c63e4;
+    border-radius: 0.8rem;
+    padding: 0.4rem 0;
+    margin-right: 0.6rem !important;
+    background-color: var(--fondo-wordpress);
 }
 
 .completado {
@@ -106,10 +237,6 @@
     border-bottom: 4px solid #0c63e4;
 }
 
-.prueba {
-    color: #d1b648;
-    border-bottom: 4px solid #d1b648;
-}
 
 .tarea {
     padding: 0.1rem;
@@ -129,7 +256,6 @@
     color: var(--font-first) !important;
     font-family: 'noto', sans-serif;
     font-size: 1.3em;
-    font-weight: bold;
     padding: 0;
     margin: 0.4rem;
 }
@@ -222,26 +348,31 @@
 
 .custom-checkbox::before {
     background-color: var(--fondo-modal);
-    border:none;
-}
-.custom-checkbox::focus {
-    background-color: var(--fondo-oscuro);
     border: none;
 }
-.custom-menu{
+
+.custom-checkbox::focus {
+    background-color: var(--fondo-wordpress);
+    border: none;
+}
+
+.custom-menu {
     background-color: var(--fondo-input);
 }
-.custom-menu .dropdown-item{
+
+.custom-menu .dropdown-item {
     color: var(--font-first);
 }
+
 .custom-menu .dropdown-item:hover {
     background-color: var(--fondo-input-hover);
     /* Cambia el color de fondo al pasar el cursor por encima */
-    color: white ;
-    
+    color: white;
+
 }
-.subtarea{
-    border: 1px solid var(--fondo-oscuro);
+
+.subtarea {
+    border: 1px solid var(--fondo-wordpress);
     border-radius: 0.5rem;
     padding: 0.5rem;
 }
@@ -254,7 +385,8 @@
     text-overflow: ellipsis;
     /* Agrega puntos suspensivos (...) al final del texto que se desborda */
 }
-.enlace{
+
+.enlace {
     color: black;
     background-color: #d1b648;
     padding: 0 0.5rem;
@@ -262,8 +394,13 @@
     width: 100%;
     margin: 0;
 }
-.enlace:hover{
+
+.enlace:hover {
     cursor: pointer;
     color: #e70;
     background-color: var(--fondo-modal);
+}
+
+.overflow-auto {
+    user-select: none;
 }
